--- a/TFMS/TFMS.Plugin/TFMS.Plugin.csproj
+++ b/TFMS/TFMS.Plugin/TFMS.Plugin.csproj
@@ -12,6 +12,7 @@
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	  <PackageReference Include="MediatR" Version="12.4.1" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="ReactiveUI.WinForms" Version="20.2.45" />
 	</ItemGroup>
 
