--- a/TFMS/TFMS.Core/TFMS.Core.csproj
+++ b/TFMS/TFMS.Core/TFMS.Core.csproj
@@ -12,6 +12,7 @@
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
 	  <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
+	  <PackageReference Include="System.Net.WebSockets" Version="4.3.0" />
 	</ItemGroup>
 
 </Project>
