--- a/Maestro/Maestro.Plugin/Maestro.Plugin.csproj
+++ b/Maestro/Maestro.Plugin/Maestro.Plugin.csproj
@@ -12,9 +12,9 @@
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	  <PackageReference Include="MediatR" Version="12.4.1" />
 	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+	  <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	  <PackageReference Include="ReactiveUI.WinForms" Version="20.2.45" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -35,6 +35,7 @@
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="System.Windows.Forms" />
+		<Reference Include="WindowsBase" />
 		<Reference Include="WindowsFormsIntegration" />
 	</ItemGroup>
 
