--- a/Maestro/Maestro.Plugin/Maestro.Plugin.csproj
+++ b/Maestro/Maestro.Plugin/Maestro.Plugin.csproj
@@ -12,6 +12,8 @@
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	  <PackageReference Include="MediatR" Version="12.4.1" />
 	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
