--- a/source/Maestro.Plugin/Maestro.Plugin.csproj
+++ b/source/Maestro.Plugin/Maestro.Plugin.csproj
@@ -13,8 +13,8 @@
 	  <PackageReference Include="MediatR" Version="12.4.1" />
 	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
-	  <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
