--- a/source/Maestro.Plugin/Maestro.Plugin.csproj
+++ b/source/Maestro.Plugin/Maestro.Plugin.csproj
@@ -5,7 +5,13 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
-		<BaseOutputPath>$(USERPROFILE)\Documents\vatSys Files\Profiles\Australia\Plugins\Maestro</BaseOutputPath>
+		<BaseOutputPath>$(registry:HKEY_LOCAL_MACHINE\SOFTWARE\WOW6432Node\Sawbe\vatSys@Path)\bin\Plugins\MaestroPlugin - Debug</BaseOutputPath>
+		
+		<Version>0.0.0</Version>
+		<Metadata Condition="'$(BuildMetadata)' != ''">+$(BuildMetadata)</Metadata>
+		<AssemblyVersion>$(Version)</AssemblyVersion>
+		<FileVersion>$(Version)</FileVersion>
+		<InformationalVersion>$(Version)$(Metadata)</InformationalVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
