--- a/source/Maestro.Plugin/Maestro.Plugin.csproj
+++ b/source/Maestro.Plugin/Maestro.Plugin.csproj
@@ -21,6 +21,7 @@
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+	  <PackageReference Include="System.Threading.Channels" Version="9.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
