--- a/source/Maestro.Wpf/Maestro.Wpf.csproj
+++ b/source/Maestro.Wpf/Maestro.Wpf.csproj
@@ -36,6 +36,11 @@
 	    <XamlRuntime>Wpf</XamlRuntime>
 	    <SubType>Designer</SubType>
 	  </Page>
+	  <Page Update="Views\PendingDeparturesView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	    <XamlRuntime>Wpf</XamlRuntime>
+	    <SubType>Designer</SubType>
+	  </Page>
 	</ItemGroup>
 
 	<ItemGroup>
