--- a/source/Maestro.Server/Maestro.Server.csproj
+++ b/source/Maestro.Server/Maestro.Server.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="9.0.8" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
