--- a/source/Maestro.Server/Dockerfile
+++ b/source/Maestro.Server/Dockerfile
@@ -4,12 +4,19 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+FROM node:18-alpine AS docs-build
+WORKDIR /docs
+COPY ["docs/package.json", "docs/package-lock.json", "./"]
+RUN npm ci
+COPY docs .
+RUN npm run build
+
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Maestro.Server/Maestro.Server.csproj", "Maestro.Server/"]
+COPY ["source/Maestro.Server/Maestro.Server.csproj", "Maestro.Server/"]
 RUN dotnet restore "Maestro.Server/Maestro.Server.csproj"
-COPY . .
+COPY source .
 WORKDIR "/src/Maestro.Server"
 RUN dotnet build "./Maestro.Server.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
@@ -20,4 +27,5 @@ RUN dotnet publish "./Maestro.Server.csproj" -c $BUILD_CONFIGURATION -o /app/pub
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY --from=docs-build /docs/build ./wwwroot
 ENTRYPOINT ["dotnet", "Maestro.Server.dll"]
