--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@
       - ASPNETCORE_ENVIRONMENT=Development
       - SEQ_SERVER_URL=http://seq:5341
     ports:
-      - "5000:8080"
+      - "8080:8080"
     depends_on:
       - seq
 
@@ -16,7 +16,7 @@
     image: datalust/seq:latest
     environment:
       - ACCEPT_EULA=Y
-      - SEQ_FIRSTRUN_ADMINPASSWORD=${SEQ_FIRSTRUN_ADMINPASSWORD}
+      - SEQ_FIRSTRUN_ADMINPASSWORD=Password01!
     ports:
       - "5341:80"
     volumes:
@@ -24,4 +24,3 @@
 
 volumes:
   seq-data:
-
