--- a/source/Maestro.Server/Maestro.Server.csproj
+++ b/source/Maestro.Server/Maestro.Server.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.4.1" />
         <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="9.0.8" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
