--- a/source/Maestro.Server/Maestro.Server.csproj
+++ b/source/Maestro.Server/Maestro.Server.csproj
@@ -5,6 +5,12 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+
+        <Version>0.0.0</Version>
+        <Metadata Condition="'$(BuildMetadata)' != ''">+$(BuildMetadata)</Metadata>
+        <AssemblyVersion>$(Version)</AssemblyVersion>
+        <FileVersion>$(Version)</FileVersion>
+        <InformationalVersion>$(Version)$(Metadata)</InformationalVersion>
     </PropertyGroup>
 
     <ItemGroup>
