--- a/source/Maestro.Core/Maestro.Core.csproj
+++ b/source/Maestro.Core/Maestro.Core.csproj
@@ -9,10 +9,10 @@
 
 	<ItemGroup>
 	  <PackageReference Include="MediatR" Version="12.4.1" />
-	  <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="9.0.6" />
 	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.6" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Serilog" Version="2.0.0" />
 	  <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
 	  <PackageReference Include="System.Net.WebSockets" Version="4.3.0" />
